# mcvi

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  idea.txt  specification.txt
examples/: simple_column.json  simple_column.schem
src/: app_args.cpp  app_args.hpp  block_alias.cpp  block_alias.hpp  command.cpp  command.hpp  direction.cpp  direction.hpp  editor.cpp  editor.hpp  input.cpp  input.hpp  main.cpp  mode.cpp  mode.hpp  nbt_writer.cpp  nbt_writer.hpp  pos.hpp  renderer.cpp  renderer.hpp  terminal.cpp  terminal.hpp  world.hpp  world_io.cpp  world_io.hpp  world_io_common.cpp  world_io_common.hpp  world_io_formats.hpp  world_io_json.cpp  world_io_mca.cpp  world_io_nbt.cpp  world_io_schem.cpp
